[web] Fix LoadingIndicator CSS animation on Safari
Summary: For some reason, Safari won't start a CSS animation if it's supposed to run on load. The only solution seems to be to apply a CSS class after the element first loads. [This StackOverflow question](https://stackoverflow.com/questions/59019911/keyframe-animation-not-starting-in-safari) was helpful

Reviewers: palys-swm

Reviewed By: palys-swm

Subscribers: KatPo, zrebcu411, Adrian

Differential Revision: https://phabricator.ashoat.com/D98

--- a/web/style.css
+++ b/web/style.css
@@ -136,7 +136,18 @@ div.upper-right {
 span.loading-indicator-loading {
   display: inline-block;
 }
-span.loading-indicator-loading:after {
+@keyframes loading-indicator-loading {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+span.loading-indicator-loading {
+  display: inline-block;
+}
+span.loading-indicator-loading-medium:after {
   content: " ";
   display: block;
   width: 15px;
@@ -144,10 +155,10 @@ span.loading-indicator-loading:after {
   border-radius: 50%;
   border: 3px solid #fff;
   border-color: #fff transparent #fff transparent;
-  animation: loading-indicator-loading 1.2s linear infinite;
-}
-span.loading-indicator-loading-large {
-  display: inline-block;
+  animation-name: loading-indicator-loading;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 span.loading-indicator-loading-large:after {
   content: " ";
@@ -157,10 +168,10 @@ span.loading-indicator-loading-large:after {
   border-radius: 50%;
   border: 3px solid #fff;
   border-color: #fff transparent #fff transparent;
-  animation: loading-indicator-loading 1.2s linear infinite;
-}
-span.loading-indicator-loading-small {
-  display: inline-block;
+  animation-name: loading-indicator-loading;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 span.loading-indicator-loading-small:after {
   content: " ";
@@ -170,18 +181,13 @@ span.loading-indicator-loading-small:after {
   border-radius: 50%;
   border: 2px solid #fff;
   border-color: #fff transparent #fff transparent;
-  animation: loading-indicator-loading 1.2s linear infinite;
+  animation-name: loading-indicator-loading;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 span.loading-indicator-black:after {
   border-color: #000 transparent #000 transparent;
-}
-@keyframes loading-indicator-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 span.loading-indicator-error {
   font-weight: bold;
